# project-template

./: .editorconfig  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TEMPLATE.md  WALKTHROUGH.md
notebooks/: notebook_example.ipynb
scripts/: script_template.py
src/my_project/: code_example.py
tests/: test_template.py
