[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]

[tool.ruff]
line-length = 99
